cmake_minimum_required(VERSION 3.13)
project(ncnn_cpp)

set(NCNN_PATH "G:/ncnn/" CACHE PATH "ncnn path")

set(NCNN_KEY_FILE $CACHE{NCNN_PATH}/x64/lib/ncnn.lib)
if(NOT EXISTS ${NCNN_KEY_FILE})
	message("invalid entry NCNN_PATH : " ${NCNN_PATH})
	message("can not find file: " ${NCNN_KEY_FILE})
	return()
endif()

set(DEBUG_OUTPUT_DIRECTORY ${NCNN_PATH}/x64/bin)
set(RELEASE_OUTPUT_DIRECTORY ${NCNN_PATH}/x64/bin)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${DEBUG_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${RELEASE_OUTPUT_DIRECTORY})

set(CMAKE_DEBUG_POSTFIX _d)
#set(CMAKE_CXX_STANDARD 17)
include_directories(${NCNN_PATH}/x64/include)
link_directories(${NCNN_PATH}/x64/lib/)
add_subdirectory(test)

